fixed navbar z-index, added padding when navbar becomes sticky and corrected offset on js scrollin animations

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,8 +1,9 @@
 :root {
     --orange: #fb6e14;
 }
+
 /* Global styles */
-html{
+html {
     margin: 0;
     padding: 0;
 }
@@ -11,7 +12,8 @@ body {
     margin: 0;
     padding: 0;
 }
-.container{
+
+.container {
     width: 100%;
     margin: auto;
 }
@@ -20,6 +22,7 @@ section {
     width: 100%;
     border-bottom: solid 2px #3b3737;
 }
+
 /* Navbar */
 #navbar {
     height: 70px;
@@ -29,7 +32,8 @@ section {
     line-height: 70px;
     box-sizing: border-box;
     outline-offset: -5px;
-    outline: 2px solid rgba(177, 177, 177,0.25);
+    outline: 2px solid rgba(177, 177, 177, 0.25);
+    z-index: 10;
 }
 
 #navbar-left {
@@ -43,6 +47,7 @@ section {
     margin: 10px;
     cursor: pointer;
 }
+
 #navbar-center {
     width: 20%;
     text-align: center;
@@ -58,9 +63,9 @@ section {
 }
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .oversection {
@@ -68,9 +73,10 @@ section {
 }
 
 /* Header */
-header{
+header {
     height: 600px;
 }
+
 .header-slider::before {
     position: absolute;
     left: 0;
@@ -89,12 +95,13 @@ header{
     width: 100%;
     height: 100%;
     background-color: #1f1f1f;
-    overflow: hidden;   
+    overflow: hidden;
     background: url("img/bg2.jpg") no-repeat center;
     background-size: cover;
     animation: slide 20s infinite 4s;
     transition: all 0.5s ease-in-out;
 }
+
 #foodee-header {
     position: fixed;
     text-align: center;
@@ -106,11 +113,20 @@ header{
 }
 
 @keyframes slide {
-    25% {background-image: url(img/bg4.jpg)}
-    50% {background-image: url(img/bg3.jpg)}
-    75% {background-image: url(img/bg1.jpg)}
+    25% {
+        background-image: url(img/bg4.jpg)
+    }
+    50% {
+        background-image: url(img/bg3.jpg)
+    }
+    75% {
+        background-image: url(img/bg1.jpg)
+    }
 }
 
+.sticky + .container {
+    padding-top: 70px;
+}
 
 /* About Section */
 .flex-container {
@@ -183,14 +199,14 @@ header{
 }
 
 @keyframes show-all {
-  /* Nowe */
-  0% {
-    opacity: 0;
-  }
+    /* Nowe */
+    0% {
+        opacity: 0;
+    }
 
-  100% {
-    opacity: 1;
-  }
+    100% {
+        opacity: 1;
+    }
 }
 
 #menu-wrapper {
@@ -207,9 +223,9 @@ header{
     animation: show-all 0.7s ease-in-out 0.7s forwards;
     opacity: 0;
 }
-#menu-header
-{
-    width:70%;
+
+#menu-header {
+    width: 70%;
     margin-top: 100px;
     text-align: center;
     margin-left: auto;
@@ -221,7 +237,7 @@ header{
     margin-right: auto;
     max-width: 64px;
     max-height: 53px;
-    
+
 }
 
 #menu-header h1 {
@@ -234,8 +250,8 @@ header{
 #menu-header hr {
     width: 40px;
     height: 0.8px;
-    color:  var(--orange);
-    background-color:var(--orange);
+    color: var(--orange);
+    background-color: var(--orange);
 }
 
 #menu-header p {
@@ -243,33 +259,35 @@ header{
     font-size: 20px;
     font-weight: 300;
     color: rgb(157, 143, 143);
-    
+
 }
 
 #menu-content {
     animation: show-all 0.925s ease-in-out 0.925s forwards;
     opacity: 0;
     display: grid;
-    grid-template-areas: 
-    "foodbox1 foodbox2"
-    "foodbox3 foodbox4"
-    
+    grid-template-areas: "foodbox1 foodbox2" "foodbox3 foodbox4"
+
 }
+
 .foodbox1 {
     grid-area: foodbox1;
 }
+
 .foodbox2 {
     grid-area: foodbox2;
 }
+
 .foodbox3 {
     grid-area: foodbox3;
 }
+
 .foodbox4 {
     grid-area: foodbox4;
 }
 
 .food-box {
-padding-left: 20px;
+    padding-left: 20px;
 }
 
 .food-box-header {
@@ -281,6 +299,7 @@ padding-left: 20px;
     justify-content: flex-start;
     align-items: center;
 }
+
 .food-box-header h2 {
     font-family: 'Playfair Display', serif;
     font-size: 30px;
@@ -299,6 +318,7 @@ padding-left: 20px;
     height: 64px;
 
 }
+
 .steak::before {
     position: absolute;
     top: 20px;
@@ -310,6 +330,7 @@ padding-left: 20px;
     height: 45px;
 
 }
+
 .menu-item {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -318,6 +339,7 @@ padding-left: 20px;
     padding-bottom: 10px;
     font-family: "Merriweather", serif;
 }
+
 .item-image {
     display: flex;
     justify-content: flex-end;
@@ -332,6 +354,7 @@ padding-left: 20px;
     min-height: 60px;
     min-width: 80px;
 }
+
 .item-details {
     display: block;
     padding-bottom: 10px;
@@ -343,10 +366,12 @@ padding-left: 20px;
     font-weight: 300;
     color: #6a6560;
 }
+
 .item-details h3 {
     font-size: 16px;
     font-weight: 400;
 }
+
 .item-price {
     display: flex;
     justify-content: flex-end;
@@ -383,7 +408,6 @@ padding-left: 20px;
     align-items: center;
     transition: all 0.3s ease-in-out;
 
-
 }
 
 #more-food-button:hover {
@@ -396,10 +420,12 @@ padding-left: 20px;
     text-decoration: none;
     color: var(--orange)
 }
+
 #menu-footer a:link {
     text-decoration: none;
     color: var(--orange)
 }
+
 /*Footer  */
 footer {
     height: 300px;
@@ -456,21 +482,18 @@ footer a:hover {
     opacity: 0;
     padding: 20px;
 }
+
 /* media queries */
-@media only screen and (max-width: 1000px)
-{
-    #menu-content
-    {
+@media only screen and (max-width: 1000px) {
+    #menu-content {
         display: grid;
-        grid-template-areas: 
-        "foodbox1"
-        "foodbox2"
-        "foodbox3"
-        "foodbox4"
+        grid-template-areas: "foodbox1" "foodbox2" "foodbox3" "foodbox4"
     }
+
     header {
         height: 400px;
     }
+
     .header-slider::before {
         height: 400px;
     }
@@ -480,29 +503,35 @@ footer a:hover {
     }
 }
 
-@media only screen and (max-width: 650px)
-{
+@media only screen and (max-width: 650px) {
     #menu-header h1 {
         font-size: 36px;
     }
+
     #menu-header p {
         font-size: 16px;
     }
+
     .food-box-header h2 {
         font-size: 26px;
     }
+
     .item-details h3 {
         font-size: 14px;
     }
+
     .item-details p {
         font-size: 12px;
     }
+
     .item-price {
         font-size: 16px;
     }
+
     header {
         height: 300px;
     }
+
     .header-slider::before {
         height: 300px;
     }
